# src/main/java/com/piere/bootcamp/bankaccounts/model/dto/OperationDto.java
@@ -9,5 +9,9 @@ public class OperationDto implements Serializable {
     
     private static final long serialVersionUID = 1L;
 
+    private String fromAccountCode;
+
+    private String toAccountCode;
+
     private Double amount;
 }
